fix: fix menu overflow; update tailwind

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +8,7 @@ html {
   max-width: 100%;
   min-width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -16,7 +19,7 @@ body {
   height: 100%;
 }
 
-a {
+a[href]:not([class]) {
   @apply text-amber-600 underline;
   transition: all 0.3s ease-in-out;
 }
